Restructure. Test client